@@ -4,6 +4,7 @@
 
 == 2.3 ==
    * Fix geni-remove-from-project script (#715)
+   * Fix up link selection when printing rspec (#818)
 
 == 2.2 ==
   * Display fingerprints of SSH keys (#695)
